Update Applications section of english doc.

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -108,12 +108,14 @@ More detailed information can be found in the Handbook:
 <p>
 To have a list of all graphical applications, you can use the SliTaz menu button 
 at the bottom left of the screen. To have a list of command line tools, you
-can open a terminal and double press on the tabulation button. And to have
-a list of all installed packages, you can launch the package manager user interface
-from the Lxpanel icon or by using the "System Tools" menu entry. To install any new packages,
-you must have a network connection, the DVD of packages or an USB storage device 
-containing any downloaded packages. Naturally any package management
-can also be done from the command line and <code>tazpkg</code>.
+can open a terminal and double press on the tabulation button.  Tazpanel provides 
+a nice GUI for package management through the 
+<a href="http://tazpanel:82/pkgs.cgi">Packages</a> tab. To retrieve a list of all 
+installed packages, open Tazpanel and navigate to the 
+<a href="http://tazpanel:82/pkgs.cgi?list">My Packages</a> page.  To install new 
+packages, you must have a network connection, the DVD of packages or a USB storage
+device containing any downloaded packages.  Naturally any package management
+can also be done from the command line using <code>tazpkg</code>.
 </p>
 
 <a name="office"></a>
