Update Office section of english doc.

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -121,12 +121,12 @@ can also be done from the command line using <code>tazpkg</code>.
 <a name="office"></a>
 <h3>Office suite</h3>
 <p>
-The SliTaz packages database provides some lightweight office applications.
+The SliTaz packages database provides a variety of lightweight office applications.
 All of these packages are easily installable in a few clicks through the packages
-manager. SliTaz also provides a simple way to install the powerful
-OpenOffice suite: just search for "OpenOffice" in the packages manager, double click
-on "get-OpenOffice3" and install the script with the <code>Auto exec</code> option
-enabled. 
+manager in Tazpanel. SliTaz also provides a simple way to install the powerful
+LibreOffice suite: just search for "LibreOffice" in the packages manager, double click
+on "get-LibreOffice", select the "Auto install non free package" checkbox, and click
+Install.
 </p>
 <p>
 To have a lightweight office suite: just use Abiword as the Word processor, Gnumeric as a
