Update System Information section of english doc.

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -156,7 +156,8 @@ You can get information on your system by clicking on "System information"
 in the System Tools menu, then "Summary". Clicking on the other 
 buttons offers you more information, and using the benchmarks can
 give you an idea on how fast your computer is. To have a list and control
-of all your current processes, you can use the "Task Manager".
+of all your current processes, you can use the "Task Manager", available in
+the same menu.
 </p>
 
 <a name="root"></a>
