Added subox to Becoming Root section of english doc.

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -157,7 +157,7 @@ in the System Tools menu, then "Summary". Clicking on the other
 buttons offers you more information, and using the benchmarks can
 give you an idea on how fast your computer is. To have a list and control
 of all your current processes, you can use the "Task Manager", available in
-the same menu.
+the same men.
 </p>
 
 <a name="root"></a>
@@ -166,7 +166,9 @@ the same menu.
 By default, Slitaz doesn't have its desktop running as root administrator:
 it asks for a root password (default <code>root</code>) for any superuser work.
 Therefore, it is safer and more secure. To become root in an xterm, simply 
-type <code>su</code> and enter the root password.
+type <code>su</code> and enter the root password.  To run a graphical application
+as root, use <code>subox</code>.  For example, to run leafpad as root you
+would run <code>subox leafpad</code>.
 </p>
 
 <a name="install"></a>
