Update Installation section of english doc.

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -175,7 +175,7 @@ would run <code>subox leafpad</code>.
 <h3>Installation</h3>
 <p>
 SliTaz can be installed to a hard disk or on an USB mass storage device using the
-"SliTaz Installer" from the "System Tools" menu. The installer makes a full HD install.
+<a href="http://tazpanel:82/installer.cgi">SliTaz Installer</a> in Tazpanel. The installer makes a full HD install.
 SliTaz won't function in memory (RAM) anymore like in Live or Frugal mode and 
 everything is persistent.
 </p>
