--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -40,25 +40,25 @@
 	<a href="http://forum.slitaz.org/">forum</a>.
 </p>
 
-<!--<p>
-The SliTaz GNU/Linux stable release is published with the project tools,
-manuals and <a href="relnotes.en.html">Release Notes</a> installed on
-the system. Manuals and this page are accessible through the standard menu.
-Please check the <a href="http://www.slitaz.org/en/">project page</a> for
-general information about SliTaz. To start to use and configure the system, 
-you can read the <a href="http://doc.slitaz.org/en:handbook:start">Handbook</a>.
-Support can be found on the SliTaz mailing list or the community 
-<a href="http://forum.slitaz.org/">Forum</a>. 
-</p>-->
+<p>
+	The SliTaz GNU/Linux stable release is published with the project tools,
+	manuals and <a href="relnotes.en.html">Release Notes</a> installed on
+	the system. Manuals and this page are accessible through the standard menu.
+	Please check the <a href="http://www.slitaz.org/en/">project page</a> for
+	general information about SliTaz.
+	Support can be found on the SliTaz mailing list or the community 
+	<a href="http://forum.slitaz.org/">Forum</a>. 
+</p>
 
 <ul>
 	<li><a href="#start">Getting started guide</a></li>
-	<!--<li><a href="relnotes.en.html">Release Notes for 3.0</a> -
-	<a href="relnotes.cn.html">cn</a> |
-	<a href="relnotes.en.html">en</a> |
-	<a href="relnotes.es.html">es</a> |
-	<a href="relnotes.fr.html">fr</a> |
-	<a href="relnotes.pt.html">pt</a></li>-->
+	<li><a href="relnotes.en.html">Release Notes for 4.0</a>
+		<!-- - <a href="relnotes.cn.html">cn</a> |
+		<a href="relnotes.en.html">en</a> |
+		<a href="relnotes.es.html">es</a> |
+		<a href="relnotes.fr.html">fr</a> |
+		<a href="relnotes.pt.html">pt</a>-->
+	</li>
 	<li><a href="http://doc.slitaz.org/en:start">Online Documentation</a></li>
 </ul>
 
@@ -189,7 +189,7 @@ Handbook: <a href="http://doc.slitaz.org/en:handbook:liveusb">LiveUSB media</a>
 </div>
 
 <div id="footer">
-	Copyright &copy; 2011 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright &copy; 2012 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </div>
 
 </body>
