since I found myself in the SliTaz people list, adding my country, Ukraine

--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -200,8 +200,8 @@
 	SliTaz is proud to be an international community project. The people of 
 	the project are the ones who develop the distribution, correct the website,
 	develop the HG repositories and write the official documentation. Passing
-	through Switzerland, France, Brazil, Quebec, China, India, Russia, England,
-	and the U.S.
+	through Switzerland, France, Brazil, Quebec, China, India, Russia, Ukraine,
+	England, and the U.S.
 </p>
 
 <ul>
