--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -34,11 +34,11 @@
 <ul>
 	<li>More than 6500 commits in the wok</li>
 	<li>More than 1000 packages added to database</li>
-	<li>Boot in 10 seconds [or less?] on a very recent machine</li>
+	<li>Boot in 10 seconds or less on a very recent machine</li>
 	<li>Centralized configuration with the new control panel</li>
 	<li>New build tool which lets you create SliTaz packages in a minute</li>
 	<li>New rolling release ISO is built after each package cook</li>
-	<li>4 Distro in one on the LiveCD (The Russian dolls)</li>
+	<li>4 Distros in one on the LiveCD (The Russian dolls)</li>
 	<li>New graphical installer and updater</li>
 	<li>New GUI Boxes and tools to create Live systems</li>
 	<li>Web boot improved: <a href="http://boot.slitaz.org/">boot.slitaz.org</a></li>
