relnotes.en.html: minimum ram requirement is 192MB

--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -58,7 +58,7 @@
 <h3>Supported Hardware</h3>
 <p>
 	SliTaz GNU/Linux 4.0 supports most machines based on i486 or x86 Intel
-	compatible processors. A minimum of 312MB of memory is recommended to
+	compatible processors. A minimum of 192MB of memory is necessary to
 	use the core LiveCD and our new russian dolls system will automatically
 	detect your memory to boot a low memory resource flavor if needed. The 
 	default LiveCD provides the Core system which is a fully featured desktop,
