ru: relnotes added, tiny edits

--- a/slitaz/relnotes.fr.html
+++ b/slitaz/relnotes.fr.html
@@ -8,15 +8,23 @@
 </head>
 <body>
 
+<!-- Header -->
 <div id="header">
 	<h1>SliTaz 4.0 Releases Notes</h1>
 </div>
 
+<!-- Languages -->
 <div id="lang">
-	<a href="http://www.slitaz.org/i18n.php" target="_blank"><img src="images/locale.png" alt="locale.png"></a> <b>Fr</b>
+	<a href="http://www.slitaz.org/i18n.php">
+		<img src="images/locale.png" alt="Locale:" /></a>
+	<a href="relnotes.en.html">en</a> |
+	<a href="relnotes.fr.html">fr</a> |
+	<a href="relnotes.ru.html">ru</a>
 </div>
 
+<!-- Content -->
 <div id="content">
+
 <h2>Release Notes (Fr)</h2>
 
 <p>
@@ -180,7 +188,7 @@
 </div>
 
 <div id="footer">
-	Copyright &copy; 2012 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright © 2012 <a href="http://www.slitaz.org/" target="_blank">SliTaz GNU/Linux</a>
 </div>
 
 </body>
