--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -16,11 +16,13 @@
 <!-- Languages -->
 <div id="lang">
 	<a href="http://www.slitaz.org/i18n.php">
-		<img src="images/locale.png" alt="locale.png" /></a>
-	<a href="relnotes.en.html">en</a>
+		<img src="images/locale.png" alt="Locale:" /></a>
+	<a href="relnotes.en.html">en</a> |
+	<a href="relnotes.fr.html">fr</a> |
+	<a href="relnotes.ru.html">ru</a>
 </div>
 
-<!-- Content. -->
+<!-- Content -->
 <div id="content">
 
 <h2>Release Notes (en)</h2>
@@ -41,8 +43,8 @@
 	<li>4 Distros in one on the LiveCD (The Russian dolls)</li>
 	<li>New graphical installer and updater</li>
 	<li>New GUI Boxes and tools to create Live systems</li>
-	<li>Web boot improved: <a href="http://boot.slitaz.org/">boot.slitaz.org</a></li>
-	<li><a href="http://doc.slitaz.org/en:releases:4.0:errata">Errata for 4.0</a>
+	<li>Web boot improved: <a href="http://boot.slitaz.org/" target="_blank">boot.slitaz.org</a></li>
+	<li><a href="http://doc.slitaz.org/en:releases:4.0:errata" target="_blank">Errata for 4.0</a>
 		on the Wiki</li>
 </ul>
 
@@ -109,7 +111,7 @@
 	You can experience the world wide web with instant messaging, VOIP, email
 	and of course through a web browser. Packages can be found through the
 	search function of Tazpkg, Tazpanel or via the website: 
-	<a href="http://pkgs.slitaz.org/">http://pkgs.slitaz.org/</a>
+	<a href="http://pkgs.slitaz.org/" target="_blank">http://pkgs.slitaz.org/</a>
 </p>
 <p>
 	SliTaz is designed to function as a powerful web server, using the stable
@@ -124,7 +126,7 @@
 </p>
 <p>
 	Packages are now built automatically by the SliTaz Build Bot: 
-	<a href="http://cook.slitaz.org/">http://cook.slitaz.org/</a> and are checked
+	<a href="http://cook.slitaz.org/" target="_blank">http://cook.slitaz.org/</a> and are checked
 	by Cookutils to ensure that FHS standards are followed.
 </p>
 
@@ -136,7 +138,7 @@
 	or removing users, creating Live systems and much more. Each page
 	provides a small description to help you manage your SliTaz system.
 	To access the panel you can use the menu entry in “System Tools” or
-	this url: <a href="http://tazpanel:82">http://tazpanel:82</a>
+	this url: <a href="http://tazpanel:82" target="_blank">http://tazpanel:82</a>
 </p>
 
 <h3>Core Desktop</h3>
@@ -224,7 +226,7 @@
 </div>
 
 <div id="footer">
-	Copyright &copy; 2012 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
+	Copyright © 2012 <a href="http://www.slitaz.org/" target="_blank">SliTaz GNU/Linux</a>
 </div>
 
 </body>
