Add: relnotes.pt_BR.html

--- a/slitaz/relnotes.en.html
+++ b/slitaz/relnotes.en.html
@@ -19,6 +19,7 @@
 		<img src="images/locale.png" alt="Locale:" /></a>
 	<a href="relnotes.en.html">en</a> |
 	<a href="relnotes.fr.html">fr</a> |
+    <a href="relnotes.pt_BR.html">pt_BR</a> |
 	<a href="relnotes.ru.html">ru</a>
 </div>
 
