move back 'pt_BR' doc names to 'pt' so tazlocale can handle it properly

--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -41,7 +41,7 @@
 </p>
 
 
-<!--<p>
+<p>
 O SliTaz GNU/Linux versão estável é distribuido com os manuais das 
 ferramentas do projetos e <a href="relnotes.pt.html">Notas de Lançamento</a>
 instalados no sistema. Os manuais e esta página podem ser acessados por
@@ -51,11 +51,11 @@ gerais sobre o SliTaz. Para usar e configurar o sistema você pode ler o
 <a href="http://doc.slitaz.org/pt:handbook:start">Manual</a>. Pode-se
 obter suporte na nossa lista de discussão ou no
 <a href="http://forum.slitaz.org/">Fórum</a>.
-</p>-->
+</p>
 
 <ul>
 	<li><a href="#start">Primeiros Passos</a></li>
-	<!--<li><a href="relnotes.pt.html">Notas de Lançamento para a versão 3.0</a></li>-->
+	<li><a href="relnotes.pt.html">Notas de Lançamento para a versão 4.0</a></li>
 	<li><a href="http://doc.slitaz.org/pt:start">Documentação Online</a></li>
 </ul>
 
