--- a/slitaz/relnotes.pt.html
+++ b/slitaz/relnotes.pt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="pt">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="pt_BR">
 <head>
 	<meta charset="utf-8" />
 	<title>SliTaz 4.0 - Notas de Lançamento</title>
@@ -19,7 +19,7 @@
 		<img src="images/locale.png" alt="Locale:" /></a>
 	<a href="relnotes.en.html">en</a> |
 	<a href="relnotes.fr.html">fr</a> |
-    <a href="relnotes.pt_BR.html">pt_BR</a> |
+    <a href="relnotes.pt.html">pt</a> |
 	<a href="relnotes.ru.html">ru</a>
 </div>
 
