--- a/slitaz/index.html
+++ b/slitaz/index.html
@@ -35,7 +35,7 @@
 	The Cooking version doesn't provide any Release Notes, major changes are
 	announced on the web site and the <a href="http://scn.slitaz.org/">Blog</a>
 	provides fresh news about the project's activity. Like the stable version,
-	you will find <a href="http://doc.slitaz.org/">documentation</a> on the
+	you can find <a href="http://doc.slitaz.org/">documentation</a> on the
 	wiki site and support on the community
 	<a href="http://forum.slitaz.org/">forum</a>.
 </p>
